--- a/client/registerstyles.css
+++ b/client/registerstyles.css
@@ -6,8 +6,9 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
+
 body{
-  background: darkslategrey;
+  background: linear-gradient(120deg,darkslategrey, teal);
   padding: 0 10px;
 }
 .wrapper{
@@ -16,6 +17,7 @@ body{
   background: #fff;
   margin: 20px auto;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
+  border-radius: 10px;
   padding: 30px;
 }
 
@@ -151,7 +153,7 @@ body{
   background:  #fec107;
   color: #fff;
   cursor: pointer;
-  border-radius: 3px;
+  border-radius: 50px;
   outline: none;
 }
 
