--- a/client/styles.css
+++ b/client/styles.css
@@ -1,8 +1,7 @@
 body { 
     margin: 0; 
     padding: 0; 
-    background-color: 
-    darkslategrey;
+    background: linear-gradient(120deg,darkslategrey, teal);
 }
 
 #map { 
@@ -20,7 +19,7 @@ body {
 }
 .banner{
     display: flex;
-    background-color: teal;
+    background: linear-gradient(120deg, #369B94, #196D6A);
     width: 100%;
     height: 100px;
     justify-content: center;
